
2007-10-14  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Allow team leaders to upload PO files for any domain.

	* bin/po-register: Show in the subject line the name of the actual
	last translator instead of the assigned translator.

2007-09-21  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Clarify things when team has no leader.

2007-09-21  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Reject PO files that don't contain a correct
	PO-Revision-Date field.  Don't make long comments about an
	incorrect POT-Creation-Date, but simply restore it.

2007-09-17  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Differentiate the background colour for packages
	depending on whether they require a disclaimer.

2007-09-15  Benno Schulenberg  <benno@vertaalt.nl>

	* tools/find-common-messages.sh: New tool, that finds
	messages that are worth including in a compendium.

	* tools/make-package-links.sh, tools/process-disclaimers.py:
	Add copyright lines.

2007-09-02  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register, bin/tp-robot: "TP-robot" in Subject line is no
	longer required.  Show in notification mails to team lists either
	the URLs of updated HTML pages or the URL of the new tarball.

2007-08-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-expire: Don't fail when finding a POT file for a
	non-existent domain.

	* bin/generate-static-pages: Don't do anything when no option or
	argument is given.

2007-08-22  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/robot.all, webgen/translators.all: Explain usage of the
	robot in a single place.  Remove instructions on how to install
	gettext.  Add some suggestions on which commands to study.

2007-08-10  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/calc-postats: Do not fail when domain or team is unknown, but
	simply delete the associated stat.  Do not stop when some file does
	not exist, but stubbornly continue after printing a warning.
